# plotit

./: compile.py  drawing.gcode  pyproject.toml  send_to_plotter.py
