[tool.poetry]
name = "plotit"
version = "0.1.0"
description = "Plot SVG's :)"
authors = ["Maarten Hoogendoorn <maarten.hoogendoorn@navara.nl>"]
license = "GPL3.0"

[tool.poetry.dependencies]
python = "^3.9"
svg-to-gcode = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
